--- a/src/app/dashboard.html
+++ b/src/app/dashboard.html
@@ -22,7 +22,7 @@
         <div class="col-md-4">
             <div class="live col-sm-12">
                 <div class="livings list-group">
-                    <div class="list-group-item active">Living<span v-if="livings.length==0"> (No Living)</span></div>
+                    <div class="list-group-item active">Lives<span v-if="livings.length==0"> (No Lives)</span></div>
                     <a v-for="living in livings" class="live-item list-group-item" v-on:click="play(living.sourceId)">
                         <div class="live-file list-group-item-heading" data-toggle="collapse">{{living.sourceName}}</div>
                         <div class="expand glyphicon glyphicon-chevron-right"></div>
