live code for web

--- a/src/app/playerv10.html
+++ b/src/app/playerv10.html
@@ -12,77 +12,83 @@
     <div id='info'></div>
     <div id='output'></div>
     <script>
-                                var c = document.getElementsByTagName('canvas')[0];
-                                var ctx = c.getContext('2d');
-                                var timeShift = 1000;
-                                var frames = [];
-                                var audios = [];
-                                var startTime;
-                                var diff;
-                                var size = 0;
-                                var image = new Image();
-                                var audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+        var c = document.getElementsByTagName('canvas')[0];
+        var ctx = c.getContext('2d');
+        var timeShift = 1000;
+        var frames = [];
+        var audios = [];
+        var startTime;
+        var diff;
+        var size = 0;
+        var image = new Image();
+        var audioCtx = new (window.AudioContext || window.webkitAudioContext)();
 
-                                function start() {
-                                    write('start');
-                                    update();
-                                    this._socket = io.connect('http://localhost:8000');
-                                    this._socket.on('receiveFrames', function (group) {
-                                        audios.push(group.audio);
+        function start() {
+            write('start');
+            update();
+            this._socket = io.connect('http://localhost:8000');
+            this._socket.on('receiveFrames', function (group) {
+                audios.push([group.ts, group.audio]);
 
-                                        group.frames.reduce(function (acc, f) {
-                                            size += f.data.length;
-                                        });
-                                        document.getElementById('info').innerHTML = size;
-                                        frames = frames.concat(group.frames);
-                                    });
-                                }
+                group.frames.reduce(function (acc, f) {
+                    size += f.data.length;
+                });
+                document.getElementById('info').innerHTML = size;
+                frames = frames.concat(group.frames);
+            });
+        }
 
-                                function update() {
-                                    if (frames.length > 0) {
-                                        var ts = +new Date();
-                                        var frame = frames[0];
-                                        if (!startTime) {
-                                            startTime = new Date(frame.ts);
-                                            diff = ts - startTime;
-                                        }
+        function update() {
+            var ts = +new Date();
+            if (frames.length > 0) {
+                var frame = frames[0];
+                if (!startTime) {
+                    startTime = new Date(frame.ts);
+                    diff = ts - startTime;
+                }
 
-                                        var mydiff = ts - diff - timeShift - new Date(frame.ts);
-                                        // drop frames
-                                        if (mydiff >= 1000) {
-                                            frames.shift();
-                                        }
-                                        // frames to display
-                                        else if (mydiff >= 0) {
-                                            console.log(mydiff + 'ms');
-                                            image.src = frame.data;
-                                            image.onload = () => {
-                                                ctx.drawImage(image, 0, 0);
-                                            }
+                var mydiff = ts - diff - timeShift - new Date(frame.ts);
+                // drop frames
+                if (mydiff >= 1000) {
+                    frames.shift();
+                }
+                // frames to display
+                else if (mydiff >= 0) {
+                    //console.log(mydiff + 'ms');
+                    image.src = frame.data;
+                    image.onload = () => {
+                        ctx.drawImage(image, 0, 0);
+                    }
 
-                                            frames.shift();
-                                        }
-                                    }
-                                    requestAnimationFrame(this.update.bind(this));
-                                }
+                    frames.shift();
+                }
+            }
 
-                                function decode() {
-                                    let audio = audios.shift();
-                                    if (audio) {
-                                        var source = audioCtx.createBufferSource();
-                                        source.connect(audioCtx.destination);
-                                        audioCtx.decodeAudioData(audio, function (buffer) {
-                                            source.buffer = buffer;
-                                        }, e => console.error(e));
-                                    }
+            if (audios.length > 0) {
+                var audioGroup = audios[0];
+                var mydiff = ts - diff - timeShift - new Date(audioGroup[0]);
+                if(mydiff >=0){
+                    console.log(mydiff + 'ms last ' + audioGroup[0] + 'ms')
+                    var source = audioCtx.createBufferSource();
+                    source.connect(audioCtx.destination);
+                    audioCtx.decodeAudioData(audioGroup[1], function (buffer) {
+                        source.buffer = buffer;
+                    }, e => console.error(e));
+                    audios.shift();
+                }
+            }
+            requestAnimationFrame(this.update.bind(this));
+        }
 
-                                }
+        function decode() {
 
-                                function write(msg) {
-                                    var div = document.getElementById('output');
-                                    if (div.innerHTML.length > 1000) div.innerHTML = '';
-                                    div.innerHTML = new Date() + msg + '<br/>' + div.innerHTML;
-                                }
+        }
+
+        function write(msg) {
+            var div = document.getElementById('output');
+            if (div.innerHTML.length > 1000) div.innerHTML = '';
+            div.innerHTML = new Date() + msg + '<br/>' + div.innerHTML;
+        }
     </script>
 </body>
 
