live code from web

--- a/src/app/recorderv10.html
+++ b/src/app/recorderv10.html
@@ -10,6 +10,7 @@
     <button id='live' onclick="start()">live</button><br/>
     <button id='mock' onclick="mock()">mock</button><br/>
     <button id='stop' onclick="stop()">stop</button><br/>
+    <audio id='v1' src='3.5.wav' autoplay></audio>
     <video id='v0' autoplay width="640" height="480"></video>
     <canvas visible width="640" height="480"></canvas>
     <video id="video-sample" data-dashjs-player controls="true" width="90%"></video>
