--- a/src/app/playerv10.html
+++ b/src/app/playerv10.html
@@ -12,83 +12,101 @@
     <div id='info'></div>
     <div id='output'></div>
     <script>
-        var c = document.getElementsByTagName('canvas')[0];
-        var ctx = c.getContext('2d');
-        var timeShift = 1000;
-        var frames = [];
-        var audios = [];
-        var startTime;
-        var diff;
-        var size = 0;
-        var image = new Image();
-        var audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+                                var c = document.getElementsByTagName('canvas')[0];
+                                var ctx = c.getContext('2d');
+                                var timeShift = 1000;
+                                var frames = [];
+                                var audios = [];
+                                var startTime;
+                                var diff;
+                                var size = 0;
+                                var image = new Image();
+                                var audioCtx = new (window.AudioContext || window.webkitAudioContext)();
 
-        function start() {
-            write('start');
-            update();
-            this._socket = io.connect('http://localhost:8000');
-            this._socket.on('receiveFrames', function (group) {
-                audios.push([group.ts, group.audio]);
+                                function start() {
+                                    write('start');
+                                    update();
+                                    this._socket = io.connect('http://localhost:8000');
+                                    this._socket.on('receiveFrames', function (group) {
+                                        audios.push([group.ts, _base64ToArrayBuffer(group.audio)]);
 
-                group.frames.reduce(function (acc, f) {
-                    size += f.data.length;
-                });
-                document.getElementById('info').innerHTML = size;
-                frames = frames.concat(group.frames);
-            });
-        }
+                                        group.frames.reduce(function (acc, f) {
+                                            size += f.data.length;
+                                        });
+                                        document.getElementById('info').innerHTML = size;
+                                        frames = frames.concat(group.frames);
+                                    });
+                                }
 
-        function update() {
-            var ts = +new Date();
-            if (frames.length > 0) {
-                var frame = frames[0];
-                if (!startTime) {
-                    startTime = new Date(frame.ts);
-                    diff = ts - startTime;
-                }
+                                function update() {
+                                    var ts = +new Date();
+                                    if (frames.length > 0) {
+                                        var frame = frames[0];
+                                        if (!startTime) {
+                                            startTime = new Date(frame.ts);
+                                            diff = ts - startTime;
+                                        }
 
-                var mydiff = ts - diff - timeShift - new Date(frame.ts);
-                // drop frames
-                if (mydiff >= 1000) {
-                    frames.shift();
-                }
-                // frames to display
-                else if (mydiff >= 0) {
-                    //console.log(mydiff + 'ms');
-                    image.src = frame.data;
-                    image.onload = () => {
-                        ctx.drawImage(image, 0, 0);
-                    }
+                                        var mydiff = ts - diff - timeShift - new Date(frame.ts);
+                                        // drop frames
+                                        if (mydiff >= 1000) {
+                                            frames.shift();
+                                        }
+                                        // frames to display
+                                        else if (mydiff >= 0) {
+                                            //console.log(mydiff + 'ms');
+                                            image.src = frame.data;
+                                            image.onload = () => {
+                                                ctx.drawImage(image, 0, 0);
+                                            }
 
-                    frames.shift();
-                }
-            }
+                                            frames.shift();
+                                        }
+                                    }
 
-            if (audios.length > 0) {
-                var audioGroup = audios[0];
-                var mydiff = ts - diff - timeShift - new Date(audioGroup[0]);
-                if(mydiff >=0){
-                    console.log(mydiff + 'ms last ' + audioGroup[0] + 'ms')
-                    var source = audioCtx.createBufferSource();
-                    source.connect(audioCtx.destination);
-                    audioCtx.decodeAudioData(audioGroup[1], function (buffer) {
-                        source.buffer = buffer;
-                    }, e => console.error(e));
-                    audios.shift();
-                }
-            }
-            requestAnimationFrame(this.update.bind(this));
-        }
+                                    if (audios.length > 0) {
+                                        var audioGroup = audios[0];
+                                        var mydiff = ts - diff - timeShift - new Date(audioGroup[0]);
+                                        if (mydiff >= 0) {
+                                            console.log(mydiff + 'ms last ' + audioGroup[0] + 'ms')
+                                            var source = audioCtx.createBufferSource();
+                                            //audioCtx.decodeAudioData(audioGroup[1].buffer, function (buffer) {
+                                            audioCtx.decodeAudioData(audioGroup[1].buffer, function (buffer) {
+                                                source.buffer = buffer;
+                                                source.connect(audioCtx.destination);
 
-        function decode() {
+                                                var array = new Int32Array(buffer);
+                                            }, e => console.error(e));
+                                            audios.shift();
+                                        }
+                                    }
+                                    requestAnimationFrame(this.update.bind(this));
+                                }
 
-        }
+                                function _base64ToArrayBuffer(str) {
+                                    var decodedStr = window.atob(str);
+                                    var bytes = new Uint8Array(decodedStr.length);
+                                    for (var i = 0; i < bytes.length; ++i) {
+                                        bytes[i] = decodedStr.charCodeAt(i);
+                                    }
+                                    return bytes;
+                                }
 
-        function write(msg) {
-            var div = document.getElementById('output');
-            if (div.innerHTML.length > 1000) div.innerHTML = '';
-            div.innerHTML = new Date() + msg + '<br/>' + div.innerHTML;
-        }
+                                function _arrayBufferToBase64(buffer) {
+                                    var binary = '';
+                                    var bytes = new Uint8Array(buffer);
+                                    var len = bytes.byteLength;
+                                    for (var i = 0; i < len; i++) {
+                                        binary += String.fromCharCode(bytes[i]);
+                                    }
+                                    return window.btoa(binary);
+                                }
+
+                                function write(msg) {
+                                    var div = document.getElementById('output');
+                                    if (div.innerHTML.length > 1000) div.innerHTML = '';
+                                    div.innerHTML = new Date() + msg + '<br/>' + div.innerHTML;
+                                }
     </script>
 </body>
 
